postgres_openshift.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: postgres-pvc
  namespace: ddadllm
spec:
  accessModes:
    - ReadWriteOnce 
  resources:
    requests:
      storage: 1Gi 
 --
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: ddadllm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:14
        ports:
        - containerPort: 5432
        resources:
          limits:
            cpu: "2"
            memory: "4Gi"          
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data # <--- Mount the PVC here
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ddadllm
spec:
  selector:
    app: postgres
  ports:
  - port: 5432

    targetPort: 5432
